--- a/Mapplas/Mapplas/AppCell.xib
+++ b/Mapplas/Mapplas/AppCell.xib
@@ -2,7 +2,7 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1536</int>
-		<string key="IBDocument.SystemVersion">12C3104</string>
+		<string key="IBDocument.SystemVersion">12C60</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2844</string>
 		<string key="IBDocument.AppKitVersion">1187.34</string>
 		<string key="IBDocument.HIToolboxVersion">625.00</string>
@@ -48,7 +48,6 @@
 								<string key="NSFrame">{{70, 0}, {250, 72}}</string>
 								<reference key="NSSuperview" ref="209533626"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -192,7 +191,6 @@
 								<string key="NSFrame">{{197, 26}, {42, 21}}</string>
 								<reference key="NSSuperview" ref="1005837521"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -322,10 +320,9 @@
 					<object class="IBUIImageView" id="831203554">
 						<reference key="NSNextResponder" ref="321150316"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{183, 5}, {64, 64}}</string>
+						<string key="NSFrame">{{186, 5}, {64, 64}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -337,10 +334,10 @@
 					<object class="IBUIImageView" id="210160154">
 						<reference key="NSNextResponder" ref="321150316"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{147, 16}, {28, 28}}</string>
+						<string key="NSFrame">{{12, 15}, {28, 28}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="831203554"/>
+						<reference key="NSNextKeyView" ref="394943840"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -349,10 +346,10 @@
 					<object class="IBUILabel" id="441129935">
 						<reference key="NSNextResponder" ref="321150316"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{127, 41}, {42, 21}}</string>
+						<string key="NSFrame">{{5, 41}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="210160154"/>
+						<reference key="NSNextKeyView" ref="831203554"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -382,10 +379,10 @@
 					<object class="IBUIImageView" id="394943840">
 						<reference key="NSNextResponder" ref="321150316"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{99, 16}, {28, 28}}</string>
+						<string key="NSFrame">{{57, 15}, {28, 28}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="441129935"/>
+						<reference key="NSNextKeyView" ref="288918772"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -397,7 +394,7 @@
 					<object class="IBUILabel" id="813753078">
 						<reference key="NSNextResponder" ref="321150316"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{49, 41}, {42, 21}}</string>
+						<string key="NSFrame">{{50, 41}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="589030190"/>
@@ -419,10 +416,10 @@
 					<object class="IBUIImageView" id="697778974">
 						<reference key="NSNextResponder" ref="321150316"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{56, 13}, {28, 28}}</string>
+						<string key="NSFrame">{{102, 15}, {28, 28}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="856930037"/>
+						<reference key="NSNextKeyView" ref="441129935"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -434,7 +431,7 @@
 					<object class="IBUILabel" id="856930037">
 						<reference key="NSNextResponder" ref="321150316"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{7, 41}, {42, 21}}</string>
+						<string key="NSFrame">{{95, 41}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="813753078"/>
@@ -456,10 +453,10 @@
 					<object class="IBUIImageView" id="288918772">
 						<reference key="NSNextResponder" ref="321150316"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{7, 12}, {28, 28}}</string>
+						<string key="NSFrame">{{145, 15}, {28, 28}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="697778974"/>
+						<reference key="NSNextKeyView" ref="856930037"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -471,10 +468,10 @@
 					<object class="IBUILabel" id="589030190">
 						<reference key="NSNextResponder" ref="321150316"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{91, 41}, {42, 21}}</string>
+						<string key="NSFrame">{{138, 41}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="394943840"/>
+						<reference key="NSNextKeyView" ref="697778974"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -494,7 +491,7 @@
 				<string key="NSFrameSize">{250, 73}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="288918772"/>
+				<reference key="NSNextKeyView" ref="210160154"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -563,6 +560,54 @@
 					<int key="connectionID">115</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">blockPressedText</string>
+						<reference key="source" ref="1040147846"/>
+						<reference key="destination" ref="856930037"/>
+					</object>
+					<int key="connectionID">116</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">pinPressedImage</string>
+						<reference key="source" ref="1040147846"/>
+						<reference key="destination" ref="210160154"/>
+					</object>
+					<int key="connectionID">117</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">pinPressedText</string>
+						<reference key="source" ref="1040147846"/>
+						<reference key="destination" ref="441129935"/>
+					</object>
+					<int key="connectionID">118</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">pinsUnpressedText</string>
+						<reference key="source" ref="1040147846"/>
+						<reference key="destination" ref="390778300"/>
+					</object>
+					<int key="connectionID">119</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">ratePressedText</string>
+						<reference key="source" ref="1040147846"/>
+						<reference key="destination" ref="813753078"/>
+					</object>
+					<int key="connectionID">120</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">sharePressedText</string>
+						<reference key="source" ref="1040147846"/>
+						<reference key="destination" ref="589030190"/>
+					</object>
+					<int key="connectionID">121</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">animate:</string>
 						<reference key="source" ref="1014404432"/>
@@ -628,7 +673,7 @@
 							<reference ref="228433974"/>
 						</array>
 						<reference key="parent" ref="0"/>
-						<string key="objectName">App Cell - Pressed</string>
+						<string key="objectName">App Cell - Unpressed</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">93</int>
@@ -646,16 +691,17 @@
 						<reference key="object" ref="321150316"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="831203554"/>
-							<reference ref="589030190"/>
-							<reference ref="288918772"/>
 							<reference ref="856930037"/>
+							<reference ref="210160154"/>
+							<reference ref="288918772"/>
 							<reference ref="697778974"/>
-							<reference ref="813753078"/>
 							<reference ref="394943840"/>
 							<reference ref="441129935"/>
-							<reference ref="210160154"/>
+							<reference ref="813753078"/>
+							<reference ref="589030190"/>
 						</array>
 						<reference key="parent" ref="0"/>
+						<string key="objectName">App Cell - Pressed</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">32</int>
@@ -776,7 +822,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">115</int>
+			<int key="maxID">121</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -797,11 +843,17 @@
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="appName">UILabel</string>
 						<string key="appPrice">UILabel</string>
+						<string key="blockPressedText">UILabel</string>
 						<string key="cellContent">UIView</string>
 						<string key="cellPressed">UIView</string>
 						<string key="cellUnpressed">UIView</string>
 						<string key="imageLogo">UIImageView</string>
 						<string key="imageRoundView">UIImageView</string>
+						<string key="pinPressedImage">UIImageView</string>
+						<string key="pinPressedText">UILabel</string>
+						<string key="pinsUnpressedText">UILabel</string>
+						<string key="ratePressedText">UILabel</string>
+						<string key="sharePressedText">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="appName">
@@ -810,6 +862,10 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="appPrice">
 							<string key="name">appPrice</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="blockPressedText">
+							<string key="name">blockPressedText</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="cellContent">
@@ -831,6 +887,26 @@
 						<object class="IBToOneOutletInfo" key="imageRoundView">
 							<string key="name">imageRoundView</string>
 							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="pinPressedImage">
+							<string key="name">pinPressedImage</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="pinPressedText">
+							<string key="name">pinPressedText</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="pinsUnpressedText">
+							<string key="name">pinsUnpressedText</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="ratePressedText">
+							<string key="name">ratePressedText</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="sharePressedText">
+							<string key="name">sharePressedText</string>
+							<string key="candidateClassName">UILabel</string>
 						</object>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
